added Students and Projects, and added it to the navbar

--- a/Students and Projects.html
+++ b/Students and Projects.html
@@ -41,16 +41,15 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
+                                <li><a class="dropdown-item" href="Safety Info.html">Safety Info</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item" href="classes.html">Classes</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="WHS.html">Woodworking Honors Society</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="Students and Projects.html">Students and Projects</a>
-                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -64,6 +63,7 @@
                 </div>
             </div>
         </nav>
+        <!-- place navbar here -->
     </header>
     <main>
         <h1 class="test">HELLO </h1>
