--- a/WHS.html
+++ b/WHS.html
@@ -46,6 +46,11 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="classes.html">Classes</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="Students and Projects.html">Students and Projects</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
