--- a/classes.html
+++ b/classes.html
@@ -45,6 +45,11 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 <li><a class="dropdown-item" href="WHS.html">Woodworking Honors Society</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="Students and Projects.html">Students and Projects</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
