--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="WHS.html">Woodworking Honors Society</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="Students and Projects.html">Students and Projects</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
