--- a/WHS.html
+++ b/WHS.html
@@ -57,6 +57,12 @@
     </header>
     <main>
         <h1 class="test">HELLO </h1>
+        <div class="row justify-content-lg-around m-3">
+            <div class="card col-12 col-lg-3 p-3 mb-2">
+                <img src="#" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Mr.Dellapietro</h5>>
+                </div>
     </main>
     <footer>
         <!-- place footer here -->
