Pages link to each other

--- a/Students and Projects.html
+++ b/Students and Projects.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <a href="index.html">index</a>
+    <a href="About the Teacher.html">About the Teacher</a>
+    <a href="classes.html">classes</a>
+    <a href="Safety Info.html">Safety Info</a>
+    <a href="Students and Projects.html">Students and Projects</a>
+    <a href="WHS.html">WHS</a>
     <header>
         <section class="hero text-center" aria-label="home" id="home">
 
