--- a/Safety Info.html
+++ b/Safety Info.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+    <a href="index.html">index</a>
+    <a href="About the Teacher.html">About the Teacher</a>
+    <a href="classes.html">classes</a>
+    <a href="Safety Info.html">Safety Info</a>
+    <a href="Students and Projects.html">Students and Projects</a>
+    <a href="WHS.html">WHS</a>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
