--- a/WHS.html
+++ b/WHS.html
@@ -59,6 +59,8 @@
             </div>
         </div>
 
+        <iframe src="..." width="100%" height="400px">
+        </iframe>
 
         <footer>
             <!-- place footer here -->
