added cards to classes page

--- a/classes.html
+++ b/classes.html
@@ -76,7 +76,76 @@
             </div>
         </div>
         <!--Hero END-->
+        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
+            <img src="#" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h5 class="card-title">Intro to Woodoworking</h5>
+                <p class="card-text">Also Known As: Wood 1
 
+                    Open To: All grades, 9-12
+
+                    Full Year Course, 5 Credits
+
+                    Mr. D's Course Description: Wood 1 is designed to help emerge you into the skill of woodworking. You
+                    will be learning about shop safety and tools/ machine safety. The projects start off very basic in
+                    the beginning of the year and progressively get harder as you learn new woodworking skills.
+
+                    Projects Made in Wood 1: The Amish Picture Frame, The Candy Machine, The Jewelry Box, Ping Pong
+                    Paddle and Individual Projects.
+
+                    What Mr. D Expects of You: To come to class everyday with an open mind and willing to work. Also to
+                    treat people the way that you would like to be treated.</p>
+            </div>
+        </div>
+
+        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-right">
+            <img src="#" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h5 class="card-title">Cabinet Making</h5>
+                <p class="card-text">Also Known As: Wood 2
+
+                    Open To: 10-12
+
+                    Prerequisite: Intro To Woodworking (Wood 1)
+
+                    Full Year Course, 5 Credits
+
+                    Mr. D's Course Description: Wood 2 is designed to build off of Wood 1. In the 2nd level of
+                    woodworking you will be learning how to design and build bigger and more complex projects with more
+                    customization. By the end of the course you will be able to design a set a plan and build that
+                    project from scratch.
+
+                    Projects Made in Wood 2: The "Knock The Rust Off" Project, Flag Project, Lamp Project, Shaker Table,
+                    Ping Pong Paddle and Individual Projects.
+
+                    What Mr. D Expects of You: To come to class everyday with an open mind and willing to work. Also to
+                    treat people the way that you would like to be treated.</p>
+            </div>
+
+        </div>
+        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
+            <img src="#" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h5 class="card-title">Advanced Cabinet Making</h5>
+                <p class="card-text">Also Known As: Adv. Woods
+
+                    Open To: 11-12
+
+                    Prerequisites: Intro To Woodworking (Wood 1) & Cabinet Making (Wood 2)
+
+                    Full Year Course, 5 Credits
+
+                    Mr. D's Course Description: Adv. Woods is designed to build off the skills that you have learned in
+                    both Wood 1 and Wood 2. This course is more of an independent study and designed towards your
+                    project ideas. However there are two assigned projects that are mandatory for the class.
+
+                    Projects Made in Adv. Woods: The "Knock The Rust Off" Project, Adirondack Chair, Shop Improvement,
+                    Ping Pong Paddle and Individual Projects.
+
+                    What Mr. D Expects of You: To come to class everyday with an open mind and willing to work. Also to
+                    treat people the way that you would like to be treated.</p>
+            </div>
+        </div>
 
         <footer>
             <!-- place footer here -->
