--- a/WHS.html
+++ b/WHS.html
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <iframe src="..." width="100%" height="400px">
+        <iframe src="imgs/ThorImageForTest.jpg" width="100%" height="400px">
         </iframe>
 
         <footer>
