Safety page finished, cards dynamically generate with vue based off of JSON data

--- a/index.html
+++ b/index.html
@@ -31,31 +31,37 @@
         </header>
 
         <!-- place navbar here -->
-
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
-            <img src="#" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h5 class="card-title">Woodworking Honors Society</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+        <div class="container py-5">
+          <div class="row d-flex flex-column align-items-center">
+              <div class="col-md-6 staggered-card mb-4">
+                  <div class="card">
+                    <img src="#" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                          <h5 class="card-title">Woodworking Honors Society</h5>
+                          <p class="card-text">This is a staggered card aligned to the right.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 staggered-card mb-4">
+                <div class="card">
+                  <img src="#" class="card-img-top" alt="...">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">About the Teachers</h5>
+                        <p class="card-text">This is a staggered card aligned to the right.</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-right">
-            <img src="#" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h5 class="card-title">About the Teachers</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-            </div>
-        </div>
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
-            <img src="#" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h5 class="card-title">Safety Info</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
-            </div>
-        </div>
+            <div class="col-md-6 staggered-card mb-4">
+              <div class="card">
+                <img src="#" class="card-img-top" alt="...">
+                  <div class="card-body text-center">
+                      <h5 class="card-title">Safety Info</h5>
+                      <p class="card-text">This is a staggered card aligned to the right.</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+      </div>
         
         <!--Hero Start-->
         <div class="row g-0">
@@ -69,7 +75,7 @@
         <!--Hero END-->
 
         <div class="row mt-3">
-            <div class="col-4">
+            <div class="col-4 col-md-4 col-sm-12">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
@@ -85,7 +91,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-md-4 col-sm-12">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
@@ -101,7 +107,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-md-4 col-sm-12">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
@@ -119,8 +125,8 @@
             </div>
         </div>
 
-        <footer>
-            <!-- place footer here -->
+        <footer class="placeholder max-width">
+            FOOTER
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
