--- a/Safety Info.html
+++ b/Safety Info.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!--VUE-->
 </head>
 
 <body>
@@ -62,11 +63,34 @@
         </nav>
     </header>
     <main>
-        <h1 class="test">HELLO </h1>
+        <h1 class="test text-center">Lorem ipsum dolor sit amet.</h1>
+        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quidem laudantium optio ut ea?</p>
+
+        <div id="app">
+            <div class="container mt-4" v-if="cards.length">
+              <div class="row" v-for="(row, rowIndex) in groupedCards" :key="rowIndex">
+                <div class="col-md-4 mb-4" v-for="(card, cardIndex) in row" :key="cardIndex">
+                  <div class="card shadow-sm">
+                    <img :src="card.image" class="card-img-top" :alt="card.title">
+                    <div class="card-body">
+                      <h5 class="card-title">{{ card.title }}</h5>
+                      <p class="card-text">{{ card.description }}</p>
+                      <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div v-else>
+              JSON/JS error
+            </div>
+          </div>
+          
     </main>
     <footer>
         <!-- place footer here -->
     </footer>
+    <script src="safety.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
