FXING PEOPELS DUMB MISTAKES

--- a/Students and Projects.html
+++ b/Students and Projects.html
@@ -90,20 +90,20 @@
               <img src="main-imgs/dc6fd7e1-3875-4694-b540-39552d39fa0d.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">Tradational & Reliable</p>
+            <p class="label-2 section-subtitle slider-reveal">Lorem ipsum dolor sit.</p>
 
             <h1 class="display-1 hero-title slider-reveal">
-              Toys You Can <br>
-              Count On
+              WoodShop <br>
+            
             </h1>
 
             <p class="body-2 hero-text slider-reveal">
-              Everyone can enjoy our toys together
+              Lorem ipsum dolor sit amet consectetur.
             </p>
 
             <a href="products.html" class="btn btn-primary slider-reveal">
-              <span class="text text-1">View Our Products</span>
-              <span class="text text-2" aria-hidden="true">View Our Products</span>
+              <span class="text text-1">Lorem, ipsum dolor.</span>
+              <span class="text text-2" aria-hidden="true">Lorem, ipsum dolor.</span>
             </a>
 
           </li>
@@ -114,7 +114,7 @@
               <img src="imgs/ThorImageForTest.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
-            <p class="label-2 section-subtitle slider-reveal">Long Lasting Relationships</p>
+            <p class="label-2 section-subtitle slider-reveal">Lorem, ipsum dolor.</p>
 
             <h1 class="display-1 hero-title slider-reveal">
               Lorem ipsum dolor sit.
@@ -140,13 +140,12 @@
             <p class="label-2 section-subtitle slider-reveal">Amazing & Unique</p>
 
             <h1 class="display-1 hero-title slider-reveal">
-              Where Every Toy <br>
-              Tells Its Own Story
+              Lorem, ipsum dolor. <br>
+              lorem
             </h1>
 
             <p class="body-2 hero-text slider-reveal">
-              Each toy is built to shocase a new story, A story that brings creativity and uniqueness
-              together
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti!
             </p>
 
             <a onclick="document.getElementById('contact').scrollIntoView()"" class="btn btn-primary slider-reveal pointer">
@@ -185,14 +184,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/trainmain.jpg" width="285" height="336" loading="lazy" alt="Toy 1" class="img-cover">
+                    <img src="main-imgs/trainmain.jpg" width="285" height="336" loading="lazy" alt="Projects 1" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="trainmain.jpg">Wooden Train</a>
+                    <a href="trainmain.jpg">Wooden </a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
@@ -201,14 +200,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/airmain.jpg" width="285" height="336" loading="lazy" alt="Toy 2" class="img-cover">
+                    <img src="main-imgs/airmain.jpg" width="285" height="336" loading="lazy" alt="Projects 2" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="#">Wooden Airplane</a>
+                    <a href="#">Wooden </a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
@@ -217,14 +216,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/boatmain.jpg" width="285" height="336" loading="lazy" alt="Toy 3" class="img-cover">
+                    <img src="main-imgs/boatmain.jpg" width="285" height="336" loading="lazy" alt="Projects 3" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="products.html">Wooden Boat</a>
+                    <a href="products.html">Wooden </a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
@@ -234,14 +233,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/trainmain.jpg" width="285" height="336" loading="lazy" alt="Toy 1" class="img-cover">
+                    <img src="main-imgs/trainmain.jpg" width="285" height="336" loading="lazy" alt="Projects 1" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="trainmain.jpg">Wooden Train</a>
+                    <a href="trainmain.jpg">Wooden </a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
@@ -250,14 +249,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/airmain.jpg" width="285" height="336" loading="lazy" alt="Toy 2" class="img-cover">
+                    <img src="main-imgs/airmain.jpg" width="285" height="336" loading="lazy" alt="Projects 2" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="#">Wooden Airplane</a>
+                    <a href="#">Wooden </a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
@@ -266,14 +265,14 @@
               <div class="service-card">
                 <a href="products.html" class="has-before hover:shine">
                   <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="main-imgs/boatmain.jpg" width="285" height="336" loading="lazy" alt="Toy 3" class="img-cover">
+                    <img src="main-imgs/boatmain.jpg" width="285" height="336" loading="lazy" alt="Projects 3" class="img-cover">
                   </figure>
                 </a>
                 <div class="card-content">
                   <h3 class="title-4 card-title">
-                    <a href="products.html">Wooden Boat</a>
+                    <a href="products.html">Wooden</a>
                   </h3>
-                  <a href="products.html" class="btn-text hover-underline label-2">View Products</a>
+                  <a href="products.html" class="btn-text hover-underline label-2">View Projects</a>
                 </div>
               </div>
             </li>
