added browser tab and two images

--- a/About the Teacher.html
+++ b/About the Teacher.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="icon" href="imgs/lab caot.jpg">
     <style>
         /* General Styles */
         body {
@@ -189,10 +189,11 @@
         <div class="row">
             <div class="col-12 col-lg-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Mr. Dellapietro">
+                    <img src="imgs/DellaPietro.jpg" class="card-img-top" alt="Mr. Dellapietro">
                     <div class="card-body text-center">
                         <h5 class="card-title">Mr. Dellapietro</h5>
-                        <p class="card-text">Learn about the experiences and qualifications of the woodworking teacher.</p>
+                        <p class="card-text">Mr. Dellapietro has been the Woodworking Teacher for .
+                        </p>
                     </div>
                 </div>
             </div>
@@ -202,7 +203,14 @@
                     <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Professional Life">
                     <div class="card-body text-center">
                         <h5 class="card-title">Professional Life</h5>
-                        <p class="card-text">Discover more about the teacher's journey and professional achievements in woodworking.</p>
+                        <p class="card-text">"Woodworking and teaching has been my passion for as long as I could
+                            remember. I can not think of any other thing I rather do for a career. To me, building
+                            something from nothing is one of the most satisfying things in the world. Especially when
+                            you step back and watch other people admire your work.
+
+                            But as a teacher, it is more rewarding watching my students make something with the
+                            knowledge I taught them. Then taking a step back and seeing the look on their face when they
+                            show off their work." - Mr. D</p>
                     </div>
                 </div>
             </div>
