--- a/Safety Info.html
+++ b/Safety Info.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+    <link rel="icon" href="imgs/lab caot.jpg">
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -64,28 +64,29 @@
     </header>
     <main>
         <h1 class="test text-center">Lorem ipsum dolor sit amet.</h1>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quidem laudantium optio ut ea?</p>
+        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quidem laudantium optio ut
+            ea?</p>
 
         <div id="app">
             <div class="container mt-4" v-if="cards.length">
-              <div class="row" v-for="(row, rowIndex) in groupedCards" :key="rowIndex">
-                <div class="col-md-4 mb-4" v-for="(card, cardIndex) in row" :key="cardIndex">
-                  <div class="card shadow-sm">
-                    <img :src="card.image" class="card-img-top" :alt="card.title">
-                    <div class="card-body">
-                      <h5 class="card-title">{{ card.title }}</h5>
-                      <p class="card-text">{{ card.description }}</p>
-                      <a href="#" class="btn btn-primary">Learn More</a>
+                <div class="row" v-for="(row, rowIndex) in groupedCards" :key="rowIndex">
+                    <div class="col-md-4 mb-4" v-for="(card, cardIndex) in row" :key="cardIndex">
+                        <div class="card shadow-sm">
+                            <img :src="card.image" class="card-img-top" :alt="card.title">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ card.title }}</h5>
+                                <p class="card-text">{{ card.description }}</p>
+                                <a href="#" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
             </div>
             <div v-else>
-              JSON/JS error
+                JSON/JS error
             </div>
-          </div>
-          
+        </div>
+
     </main>
     <footer>
         <!-- place footer here -->
