--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!--VUE-->
     <!-- Custom CSS -->
     <link rel="stylesheet" href="home.css">
     <style>
@@ -123,13 +123,21 @@
     </nav>
 
     <!-- Hero Section with Slider -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Welcome to MRHS Woodworking</h1>
-            <p>Discover the art of woodworking.</p>
-            <!-- You can add a slider here using JavaScript if needed -->
-        </div>
-    </section>
+    <div id="app">
+        <section class="hero">
+            <video v-if="!isMobile" autoplay loop muted playsinline class="hero-video">
+                <source src="vids/woodshopBRoll.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <img v-else src="imgs/ThorImageForTest.jpg" alt="Woodworking" class="hero-image">
+            <div class="hero-content">
+                <h1>Welcome to MRHS Woodworking</h1>
+                <p>Discover the art of woodworking.</p>
+            </div>
+        </section>
+    </div>
+    
+    
 
     <!-- Staggered Cards Section -->
     <div class="container py-5">
@@ -239,7 +247,7 @@
         <a href="#">Instagram</a> and
         <a href="#">Facebook</a>.
     </footer>
-
+    <script src="home.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
