added descriptions for teacher pade (except interests) and WHS pages

--- a/WHS.html
+++ b/WHS.html
@@ -45,8 +45,13 @@
             <img src="#" class="card-img-top" alt="...">
             <div class="card-body text-center">
                 <h5 class="card-title">Woodworking Honors Society</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">The Woodworking Honors Society at Marlboro High School, founded under the
+                    leadership of esteemed teacher Mr. DellaPietro, is dedicated to promoting excellence in woodworking
+                    and related trades. This organization provides a platform for students to deepen their craftsmanship
+                    skills, engage in collaborative projects, and foster a community centered around the art and trade
+                    of woodworking. Members are recognized for their commitment to the craft and their contributions to
+                    both the school and the broader community. The society not only enhances students' technical
+                    abilities but also instills values of leadership, service, and dedication to the trade.</p>
             </div>
 
         </div>
@@ -54,8 +59,22 @@
             <img src="#" class="card-img-top" alt="...">
             <div class="card-body text-center">
                 <h5 class="card-title">How to Join</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the card's content.</p>
+                <p class="card-text">To join the Woodworking Honors Society at Marlboro High School, students should
+                    demonstrate a strong commitment to woodworking and excellence in technology education. While
+                    specific membership criteria for this society are not publicly detailed, it's common for honor
+                    societies to consider factors such as academic achievement, leadership, service, and character. For
+                    instance, the National Honor Society requires students to maintain a minimum cumulative GPA of 3.75
+                    and exhibit excellence in service, leadership, and character.
+
+                    Similarly, the Woodworking Honors Society likely evaluates candidates based on their dedication to
+                    the craft, participation in related activities, and overall academic performance.
+
+                    To obtain precise information about the application process, eligibility requirements, and any
+                    associated obligations, it's advisable to contact Mr. DellaPietro, the society's founder and
+                    woodworking instructor at Marlboro High School. He can provide guidance tailored to your interests
+                    and inform you about upcoming opportunities for involvement. Engaging with Mr. DellaPietro and
+                    expressing your enthusiasm for woodworking will not only clarify the path to membership but also
+                    demonstrate your commitment to the field..</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
