--- a/About the Teacher.html
+++ b/About the Teacher.html
@@ -192,7 +192,17 @@
                     <img src="imgs/DellaPietro.jpg" class="card-img-top" alt="Mr. Dellapietro">
                     <div class="card-body text-center">
                         <h5 class="card-title">Mr. Dellapietro</h5>
-                        <p class="card-text">Mr. Dellapietro has been the Woodworking Teacher for .
+                        <p class="card-text">Mr. DellaPietro is a dedicated woodworking instructor at Marlboro
+                            High School, recognized for his exceptional teaching and commitment to student success. In
+                            the 2019-2020 academic year, he was honored as the school's Teacher of the Year, a testament
+                            to his impact on the school community.
+                            Mr. DellaPietro teaches courses such as Intro to Woodworking, Cabinetmaking, and Advanced
+                            Cabinetmaking, providing students with comprehensive skills in woodworking.
+                            His students hold him in high regard; one described him as "incredible" and "the best
+                            teacher I had in high school."
+                            Colleagues also appreciate his contributions; Dr. Andreacci, a fellow educator,
+                            expressed gratitude for the woodworking students' annual gifts, reflecting the positive
+                            environment fostered under his guidance.
                         </p>
                     </div>
                 </div>
