--- a/classes.html
+++ b/classes.html
@@ -1,75 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MRHS Woodworking</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
-    <link rel="icon" href="imgs/lab caot.jpg">
+  <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>MRHS Woodworking</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="classes.css">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">MRHS Woodworking</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="About the Teacher.html">About the Teacher</a></li>
-                        <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Safety Info.html">Safety Info</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Students and Projects.html">Students and Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="WHS.html">WHS</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+  <section class="events-page">
+    <div id="section1" class="event">
+      <div class="pinWrapper">
+        <div class="text">
+          <h2>Intro To Woodworking</h2>
+          <p>Wood 1 introduces woodworking with a focus on shop and machine safety. Projects start simple and gradually increase in complexity as skills develop.</p>
+        </div>
+        <div class="image" id="loaderVideo">
+          <video autoplay loop muted playsinline>
+            <source src="https://www.yudiz.com/codepen/studio-r/bg-video.mp4" type="video/mp4">
+          </video>
+        </div>
+        <!-- Video -->
+      </div>
+      <div class="scrollBtn">
+        <h6>scroll</h6>
+        <span></span>
+      </div>
+    </div>
+    <!-- Section 01 -->
+    <div id="section2" class="event">
+      <div class="pinWrapper">
+        <div class="text">
+          <h2>Kitchen</h2>
+          <p>Check out our modern and functional kitchen furniture and accessories.</p>
+        </div>
+        <div class="image"></div>
+      </div>
+    </div>
+    <!-- Section 02 -->
+    <div id="section3" class="event">
+      <div class="pinWrapper">
+        <div class="text">
+          <h2>Bedroom</h2>
+          <p>Discover our collection of bedroom furniture to create your dream space.</p>
+        </div>
+        <div class="image"></div>
+      </div>
+    </div>
+    <!-- Section 03 -->
+    <div id="section4" class="event">
+      <div class="pinWrapper">
+        <div class="text">
+          <h2>Office</h2>
+          <p>Find the perfect office furniture to make your workspace comfortable and productive.</p>
+        </div>
+        <div class="image"></div>
+      </div>
+    </div>
+    <!-- Section 04 -->
+  </section>
 
-    <main class="container my-5">
-        <section class="row">
-            <div class="col-lg-12 text-center mb-5">
-                <h1 class="display-4">Welcome to MRHS Woodworking</h1>
-                <p class="lead">Crafting excellence through education and hands-on experience</p>
-            </div>
-        </section>
-
-        <section class="row">
-            <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Intro to Woodworking</h5>
-                        <p class="card-text">Discover the fundamentals of woodworking in this comprehensive course designed for all grade levels.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Cabinet Making</h5>
-                        <p class="card-text">Build on your skills and learn advanced techniques in design and construction of larger projects.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h5 class="card-title">Advanced Cabinet Making</h5>
-                        <p class="card-text">Take your craftsmanship to the next level with this independent study-style course for experienced woodworkers.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 MRHS Woodworking. All rights reserved.</p>
-    </footer>
+  <!-- Loader -->
+  <div id="preloader">
+    <div class="text-wrapper">
+      <h1 id="first-text">Woodworking</h1>
+      <h3 id="second-text">Classes Offered</h3>
+    </div>
+  </div>
+</body>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.27/dist/lenis.min.js"></script>
+<!--Img scroll pre-code-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
+<script src="https://unpkg.com/@studio-freight/lenis@1.0.34/dist/lenis.min.js"></script>
+<script src="classes.js"></script>
+
 </body>
 </html>
