content for classes page is done, still need my god damm pictures GOD DAMM IT!!!

--- a/classes.html
+++ b/classes.html
@@ -35,8 +35,8 @@
     <div id="section2" class="event">
       <div class="pinWrapper">
         <div class="text">
-          <h2>Kitchen</h2>
-          <p>Check out our modern and functional kitchen furniture and accessories.</p>
+          <h2>Cabinet Making</h2>
+          <p>Wood 2 builds on Wood 1, teaching you to design and construct larger, more complex, and customizable projects. By the end, you'll be able to plan and build a project from scratch. </p>
         </div>
         <div class="image"></div>
       </div>
@@ -45,22 +45,14 @@
     <div id="section3" class="event">
       <div class="pinWrapper">
         <div class="text">
-          <h2>Bedroom</h2>
-          <p>Discover our collection of bedroom furniture to create your dream space.</p>
+          <h2>Advanced Cabinet Making</h2>
+          <p>Adv. Woods expands on Wood 1 and 2, focusing on independent projects with two required assignments.</p>
         </div>
         <div class="image"></div>
       </div>
     </div>
     <!-- Section 03 -->
-    <div id="section4" class="event">
-      <div class="pinWrapper">
-        <div class="text">
-          <h2>Office</h2>
-          <p>Find the perfect office furniture to make your workspace comfortable and productive.</p>
-        </div>
-        <div class="image"></div>
-      </div>
-    </div>
+  
     <!-- Section 04 -->
   </section>
 
