--- a/Safety Info.html
+++ b/Safety Info.html
@@ -12,6 +12,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!--VUE-->
+    <link rel="stylesheet" href="vueCards.css"> <!--REPEATING CARDS CSS-->
 </head>
 
 <body>
@@ -67,7 +68,7 @@
         <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quidem laudantium optio ut
             ea?</p>
 
-        <div id="app">
+        <!--<div id="app">
             <div class="container mt-4" v-if="cards.length">
                 <div class="row" v-for="(row, rowIndex) in groupedCards" :key="rowIndex">
                     <div class="col-md-4 mb-4" v-for="(card, cardIndex) in row" :key="cardIndex">
@@ -85,13 +86,54 @@
             <div v-else>
                 JSON/JS error
             </div>
+        </div> <!--APP END-->
+
+        <div id="app">
+            <div class="container mt-4" v-if="cards.length">
+                <div class="row" v-for="(row, rowIndex) in groupedCards" :key="rowIndex">
+                    <div class="col-md-4 mb-4" v-for="(card, cardIndex) in row" :key="cardIndex">
+                        <!-- Custom Styled Card -->
+                        <div class="file-container" :data-border-color="card.borderColor" data-hover-text-color="#242424">
+                            <div class="inner-container">
+                                <div class="image-container">
+                                    <img :src="card.image" class="file-image" :alt="card.title">
+                                </div>
+                                <div class="content">
+                                    <h1 class="text">
+                                        <span class="title">{{ card.title }}</span>
+                                        <span class="text-effect"></span>
+                                    </h1>
+                                    <p class="description">{{ card.description }}</p>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+            <div v-else>JSON/JS error</div>
+        </div>        
+        
+        <div class="containerV">
+            <div class="file-container" id="container1" data-border-color="#DAFF3E" data-hover-text-color="#242424">
+                <div class="inner-container">
+                    <div class="image-container">
+                        <img src="https://images.unsplash.com/photo-1567777285486-8af9bfd5d7db?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="American English" class="file-image">
+                    </div>
+                    <div class="contentV">
+                        <h1 class="textV">
+                            <span class="titleV">American English</span>
+                            <span class="text-effect"></span>
+                        </h1>
+                        <p class="description">Master American English efficiently with personalized lessons, cultural insights, and practical exercises.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
     <footer>
         <!-- place footer here -->
     </footer>
-    <script src="safety.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -100,6 +142,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+        <script src="safety.js"></script>
+
 </body>
 
 </html>
