removed period in landing page tagline

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <img v-else src="imgs/ThorImageForTest.jpg" alt="Woodworking" class="hero-image">
             <div class="hero-content">
                 <h1 class="drift display-1">Welcome to MRHS Woodworking</h1>
-                <p class="drift display-4">Discover the art of woodworking.</p>
+                <p class="drift display-4">Discover the art of woodworking</p>
             </div>
         </section>
     </div>
