--- a/Safety Info.html
+++ b/Safety Info.html
@@ -12,7 +12,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> <!--VUE-->
-    <link rel="stylesheet" href="vueCards.css"> <!--REPEATING CARDS CSS-->
+    <link rel="stylesheet" href="css files/vueCards.css"> <!--REPEATING CARDS CSS-->
 </head>
 
 <body>
@@ -142,7 +142,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-        <script src="safety.js"></script>
+        <script src="js files/safety.js"></script>
 
 </body>
 
