--- a/Students and Projects.html
+++ b/Students and Projects.html
@@ -27,8 +27,8 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="projects.css">
-  <link rel="stylesheet" href="second.css">
+  <link rel="stylesheet" href="css files/projects.css">
+  <link rel="stylesheet" href="css files/second.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 
@@ -323,7 +323,7 @@
       <!-- 
     - custom js link
   -->
-      <script src="test.js"></script>
+      <script src="js files/test.js"></script>
 
       <!-- 
     - ionicon link
