--- a/WHS.html
+++ b/WHS.html
@@ -56,16 +56,14 @@
         <main>
             <h1 class="test">HELLO </h1>
         </main>
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
-            <img src="#" class="card-img-top" alt="...">
+        <div class="card col-12 col-lg-3 p-3 mb-2 staggered-card">
             <div class="card-body text-center">
                 <h5 class="card-title">Teacher(s)</h5>
                 <p class="card-text">Mr. Dellapietro</p>
             </div>
         </div>
 
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-right">
-            <img src="#" class="card-img-top" alt="...">
+        <div class="card col-12 col-lg-3 p-3 mb-2 staggered-card">
             <div class="card-body text-center">
                 <h5 class="card-title">Woodworking Honors Society</h5>
                 <p class="card-text">The Woodworking Honors Society at Marlboro High School, founded under the
@@ -78,8 +76,7 @@
             </div>
 
         </div>
-        <div class="card col-12 col-lg-3 p-3 mb-2 stagger-left">
-            <img src="#" class="card-img-top" alt="...">
+        <div class="card col-12 col-lg-3 p-3 mb-2 staggered-card">
             <div class="card-body text-center">
                 <h5 class="card-title">How to Join</h5>
                 <p class="card-text">To join the Woodworking Honors Society at Marlboro High School, students should
@@ -97,16 +94,17 @@
                     woodworking instructor at Marlboro High School. He can provide guidance tailored to your interests
                     and inform you about upcoming opportunities for involvement. Engaging with Mr. DellaPietro and
                     expressing your enthusiasm for woodworking will not only clarify the path to membership but also
-                    demonstrate your commitment to the field..</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                    demonstrate your commitment to the field.</p>
+                <a href="https://sites.google.com/view/whsmarlboro/home?authuser=0" class="btn btn-primary" target="_blank">WHS Site</a>
             </div>
         </div>
 
-        <iframe src="imgs/ThorImageForTest.jpg" width="100%" height="400px">
-        </iframe>
+        <img src="imgs/ThorImageForTest.jpg" alt="Mr. DellaPietro and some of his students holding thor hammers." width="100%">
 
-        <footer>
-            <!-- place footer here -->
+        <footer class="footer">
+            <div class="container">
+                <p>&copy; 2025 MRHS Woodworking. All rights reserved.</p>
+            </div>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
