--- a/index.html
+++ b/index.html
@@ -229,12 +229,10 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        &copy; 2025 MRHS Woodworking | Designed with ❤️ in Orange & Black |
-        <a href="#">Privacy Policy</a> |
-        Follow us on
-        <a href="#">Instagram</a> and
-        <a href="#">Facebook</a>.
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 MRHS Woodworking. All rights reserved.</p>
+        </div>
     </footer>
     <script src="js files/home.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
