Update Students and Projects.html, fixed navbar

--- a/Students and Projects.html
+++ b/Students and Projects.html
@@ -67,10 +67,8 @@
             <li><a href="classes.html">Classes</a></li>
             <li><a href="About the Teacher.html">Teachers</a></li>
             <li><a href="Students and Projects.html">students and Projects </a></li>
-            <li><a href="WHS.html">WHS </a></li>
             <li><a href="Safety Info.html">Safety Information </a></li>
-
-
+            <li><a href="WHS.html">Woodworking Honor Society</a></li>
         </ul>
         
         <div class="right">
